<resources>
    <!-- GENERAL STRINGS -->
    <string name="app_name">Hijos de la Luna</string>
    <string name="developers">Andrés Concha, Cristhyan de Marchena, Maximilliam Garcia, Andrés Movilla</string>

    <!--  STRINGS -->
    <string name="title_login">Invocar</string>
    <string name="title_signup">Pactar</string>
    <string name="title_link">Enlazar</string>
    <string name="action_login_string">Invocate</string>
    <string name="action_signup_string">Pactate</string>
    <string name="action_link_string">Enlazate</string>

    <!-- FORM STRINGS -->
    <string name="placeholder_username">Usuario</string>
    <string name="placeholder_email">Correo Electronico</string>
    <string name="placeholder_name">Nombre</string>
    <string name="placeholder_lastname">Apellido</string>
    <string name="placeholder_password">Contraseña</string>

    <!-- SERVER LINK STRINGS -->
    <string name="label_server_ip">Dirección Server</string>
    <string name="label_server_port">Portal Server</string>
    <string name="label_socket_ip">Dirección Socket</string>
    <string name="label_socket_port">Portal Socket</string>
    <string name="placeholder_server_ip">172.17.9.21</string>
    <string name="placeholder_server_port">9090</string>
    <string name="placeholder_socket_ip">172.17.9.21</string>
    <string name="placeholder_socket_port">8080</string>

    <!-- UI STRINGS -->
    <string name="back_button"> Atrás </string>

    <!-- MENU STRINGS -->
    <string name="menu_chat"> Comunícate </string>
    <string name="menu_map"> Ubicate </string>
    <string name="menu_logout"> Descartate </string>
    <string name="menu_open">Open navigation drawer</string>
    <string name="menu_close">Close navigation drawer</string>

    <!-- LOCATION STRINGS -->
    <string name="label_lastloc">Última ubicación</string>
    <string name="label_lat">Latitud</string>
    <string name="label_long">Longitud</string>
    <string name="placeholder_nodata">Sin datos</string>

    <!-- DATE SEARCH STRINGS -->
    <string name="search_title">Crono Busqueda</string>
    <string name="search_location">Crono Buscar</string>
    <string name="date_start">Crono Ubicacion Inicial</string>
    <string name="date_end">Crono Ubicacion Final</string>

    <!-- CLICKED DIALOG STRINGS -->
    <string name="dialog_placeholder_name">Nombre</string>
    <string name="dialog_placeholder_location">Ubicación</string>
    <string name="dialog_btn_history">Rastrear</string>

    <!-- CHAT STRINGS -->
    <string name="message_placeholder">Escribe un conjuro</string>

</resources>
