<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/content_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/title_logo"
        android:src="@drawable/ic_logo_full_color_svg"
        android:tint="@android:color/white"
        android:layout_width="250dp"
        android:layout_height="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.052"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/form_height"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        >

        <TextView
            android:layout_width="@dimen/input_width"
            android:layout_height="wrap_content"
            android:fontFamily="@font/latofontfamily"
            android:text="@string/label_server_ip"
            android:textColor="@android:color/white"
            android:layout_marginTop="@dimen/form_first_input" />

        <EditText
            android:id="@+id/server_ip_txt"
            android:layout_width="@dimen/input_width"
            android:layout_height="@dimen/input_height"
            android:layout_marginTop="@dimen/form_label_spacing"
            android:backgroundTint="@android:color/white"
            android:fontFamily="@font/latofontfamily"
            android:text="@string/placeholder_server_ip"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="@dimen/input_width"
            android:layout_height="wrap_content"
            android:fontFamily="@font/latofontfamily"
            android:text="@string/label_server_port"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:layout_marginTop="@dimen/form_input_spacing"   />

        <EditText
            android:id="@+id/server_port_txt"
            android:layout_width="@dimen/input_width"
            android:layout_height="@dimen/input_height"
            android:layout_marginTop="@dimen/form_label_spacing"
            android:backgroundTint="@android:color/white"
            android:fontFamily="@font/latofontfamily"
            android:inputType="number"
            android:text="@string/placeholder_server_port"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/link_server"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:layout_marginTop="@dimen/form_input_spacing"
            android:backgroundTint="@color/colorAccentAlt"
            android:text="@string/title_link"
            android:textColor="@android:color/white"
            android:textSize="@dimen/btn_text_size"
            android:textStyle="bold" />

</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>