<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bonuspack_bubble"
    android:backgroundTint="@android:color/white">

    <TextView
        android:id="@+id/dialog_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="3dp"
        android:text="@string/dialog_placeholder_name"
        android:textSize="15dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/dialog_user_last_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dialog_user_name"
        android:layout_below="@+id/dialog_user_name"
        android:layout_marginTop="5dp"
        android:text="@string/dialog_placeholder_location"
        android:textSize="12dp"/>

    <Button
        android:id="@+id/dialog_btn_location_history"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/dialog_user_last_date"
        android:layout_marginRight="5dp"
        android:text="@string/dialog_btn_history"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        />

</RelativeLayout>