<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_title"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/input_date_start"
            android:hint="@string/date_start"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:focusable="false"
            android:clickable="true"
            android:maxLines="1" />

        <ImageButton
            android:id="@+id/date_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_date_range"
            android:background="#ffffff"
            android:layout_marginTop="10dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/input_date_end"
            android:hint="@string/date_end"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:focusable="false"
            android:clickable="true"
            android:maxLines="1" />

        <ImageButton
            android:id="@+id/date_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_date_range"
            android:background="#ffffff"
            android:layout_marginTop="10dp"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btn_search_in_dates"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@android:color/white"
        android:text="@string/search_location"/>

</LinearLayout>