<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/content_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="@dimen/input_width"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_signup"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="@dimen/back_btn_width"
        android:layout_height="@dimen/back_btn_height"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorSoft"
        android:text="@string/back_button"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/form_height"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38">

        <TextView
            android:id="@+id/label_username"
            android:layout_width="@dimen/input_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_first_input"
            android:labelFor="@id/input_username"
            android:text="@string/placeholder_username"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/input_username"
            android:layout_width="@dimen/input_width"
            android:layout_height="@dimen/input_height"
            android:layout_marginTop="@dimen/form_label_spacing"
            android:backgroundTint="@android:color/white"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/placeholder_username"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/label_password"
            android:layout_width="@dimen/input_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_input_spacing"
            android:labelFor="@id/input_password"
            android:text="@string/placeholder_password"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="@dimen/input_width"
            android:layout_height="@dimen/input_height"
            android:layout_marginTop="@dimen/form_label_spacing"
            android:backgroundTint="@android:color/white"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/placeholder_password"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/label_name"
            android:layout_width="@dimen/input_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_input_spacing"
            android:labelFor="@id/input_name"
            android:text="@string/placeholder_name"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/input_name"
            android:layout_width="@dimen/input_width"
            android:layout_height="@dimen/input_height"
            android:layout_marginTop="@dimen/form_label_spacing"
            android:backgroundTint="@android:color/white"
            android:ems="10"
            android:text="@string/placeholder_name"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/label_lastname"
            android:layout_width="@dimen/input_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_input_spacing"
            android:labelFor="@id/input_lastname"
            android:text="@string/placeholder_lastname"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/input_lastname"
            android:layout_width="@dimen/input_width"
            android:layout_height="@dimen/input_height"
            android:layout_marginTop="@dimen/form_label_spacing"
            android:backgroundTint="@android:color/white"
            android:ems="10"
            android:text="@string/placeholder_lastname"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/label_email"
            android:layout_width="@dimen/input_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_input_spacing"
            android:labelFor="@id/input_email"
            android:text="@string/placeholder_email"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="@dimen/input_width"
            android:layout_height="@dimen/input_height"
            android:layout_marginTop="@dimen/form_label_spacing"
            android:backgroundTint="@android:color/white"
            android:ems="10"
            android:text="@string/placeholder_email"
            android:textColor="@android:color/white" />


    </LinearLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_width="@dimen/long_btn_width"
        android:layout_height="@dimen/long_btn_height"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/colorAccentAlt"
        android:text="@string/title_signup"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>